Bug 54937 - [SNA] Ivybridge Mobile (GT2) Rendering corruption in Opera
Summary: [SNA] Ivybridge Mobile (GT2) Rendering corruption in Opera
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-14 17:32 UTC by Roman Jarosz
Modified: 2012-09-14 19:06 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Corruption screenshot (390.16 KB, image/png)
2012-09-14 17:32 UTC, Roman Jarosz
no flags Details
Xorg.0.log (27.46 KB, text/plain)
2012-09-14 17:33 UTC, Roman Jarosz
no flags Details

Description Roman Jarosz 2012-09-14 17:32:05 UTC
Hi,

using latest git source 8e9d64203428b344433ac8f86dc1f06d2c32529a I see rendering corruption using Opera with SNA acceleration, it looks like the screen isn't redrawn.

Steps to reproduce:
1. Start Opera browser
2. In menu goto Tools->Preferences...
3. Select "Advanced" tab
4. Choose "Content" on the left side
5. And click "Plug-in Options..." button
6. Move the "Plug-in Options..." dialog down, and the parent window isn't redrawn correctly.

It happens also to other KDE windows if I open them on top of broken Opera window.

Using KDE without composition.

00:02.0 VGA compatible controller: Intel Corporation 3rd Gen Core processor Graphics Controller (rev 09)
Linux kedgelenovo 3.5.3-gentoo #7 SMP Thu Sep 13 22:40:16 CEST 2012 x86_64 Intel(R) Core(TM) i7-3720QM CPU @ 2.60GHz GenuineIntel GNU/Linux


Intel(R) Ivybridge Mobile (GT2)
Comment 1 Roman Jarosz 2012-09-14 17:32:51 UTC
Created attachment 67179 [details]
Corruption screenshot
Comment 2 Roman Jarosz 2012-09-14 17:33:20 UTC
Created attachment 67180 [details]
Xorg.0.log
Comment 3 Roman Jarosz 2012-09-14 17:41:10 UTC
I'm using Opera 12.02 build 1578
Comment 4 Chris Wilson 2012-09-14 18:01:16 UTC
The bug only occurs when using the Oxygen toolbars, was using Plastique because of an earlier bug and wondered why it worked.
Comment 5 Chris Wilson 2012-09-14 18:35:19 UTC
commit d995705fb01842652a79076cbecee4392f653bfe
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Sep 14 19:32:06 2012 +0100

    sna: Only discard CPU damage if we completely overwrite its extents
    
    If we are performing a clipped copy, then we must be careful not to
    completely discard the CPU damage as it may not be entirely replaced.
    
    Reported-by: Roman Jarosz <kedgedev@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=54937
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 6 Roman Jarosz 2012-09-14 19:06:58 UTC
Thanks for the quick fix, the corruption is gone :)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.