sna: Only discard CPU damage if we completely overwrite its extents

If we are performing a clipped copy, then we must be careful not to
completely discard the CPU damage as it may not be entirely replaced.

Reported-by: Roman Jarosz <kedgedev@gmail.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=54937
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>